# vulkan-game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.py  vcpkg.json
include/: VulkanGraphicsBackend.hpp
include/ecs/: ComponentStorage.hpp  GameEntitiesManager.hpp
include/ecs/components/: InputComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  TransformComponent.hpp
include/ecs/systems/: InputSystem.hpp  RenderSystem.hpp
include/test_objects/: HexMap.hpp  HexMapComponentsBuilder.hpp  TriangleComponentsBuilder.hpp
include/tilemap_test/: CubeCoords.hpp  HexMapComponent.hpp  HexMapGenerator.hpp
include/vulkan/: FrameRenderer.hpp  VulkanBuffer.hpp  VulkanCommandManager.hpp  VulkanDebugMessenger.hpp  VulkanDevice.hpp  VulkanDeviceContext.hpp  VulkanErrorHandling.hpp  VulkanFramesManager.hpp  VulkanGraphicsBackend.hpp  VulkanInstance.hpp  VulkanPipeline.hpp  VulkanPipelinesManager.hpp  VulkanSwapchainManager.hpp  VulkanVertexBuffersManager.hpp
include/vulkan/test_objects/: HexMapBuilder.hpp  VulkanHexMap.hpp  VulkanTriangle.hpp
include/vulkan/tilemap_test/: VulkanHexMapMaterial.hpp  VulkanHexMapObject.hpp
include/vulkan/triangle_test/: TriangleMaterial.hpp  TriangleObject.hpp
shaders/: hexmap.vert  triangle.frag  triangle.vert
src/: main.cpp
src/vulkan/: FrameRenderer.cpp  VulkanBuffer.cpp  VulkanCommandManager.cpp  VulkanDebugMessenger.cpp  VulkanDevice.cpp  VulkanFramesManager.cpp  VulkanGraphicsBackend.cpp  VulkanInstance.cpp  VulkanPipeline.cpp  VulkanPipelinesManager.cpp  VulkanSwapchainManager.cpp  VulkanVertexBuffersManager.cpp
src/vulkan/tilemap_test/: VulkanHexMapMaterial.cpp  VulkanHexMapObject.cpp
